--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,14 @@
 <div class="page-header">
-  <h3>Single value</h3>
+  <h3>This is where I need to modify</h3>
 </div>
 
 <pre>&lt;nouislider [min]=&quot;someMin&quot; [max]=&quot;someLimit&quot; [step]=&quot;someStep&quot; [(ngModel)]=&quot;someValue&quot; (ngModelChange)=&quot;onChange($event)&quot; [disabled]=&quot;disabled&quot;&gt;&lt;/nouislider&gt;</pre>
 
-<code>someValue: {{ someValue | json }}, someMin: {{ someMin | json }}, someMax: {{ someMax | json }}, someStep: {{ someStep | json }}</code>
-
 <nouislider [min]="someMin" [max]="someMax" [step]="someStep" [(ngModel)]="someValue" (ngModelChange)="onChange($event)" [disabled]="disabled"></nouislider>
+
+<div class="alert alert-info">
+  <code>someValue: {{ someValue | json }}, someMin: {{ someMin | json }}, someMax: {{ someMax | json }}, someStep: {{ someStep | json }}</code>
+</div>
 
 <div class="btn-group">
   <button type="button" class="btn btn-primary" [disabled]="disabled" (click)="changeSomeValue(-1)">-1</button>
